--- a/src/styles_landing.css
+++ b/src/styles_landing.css
@@ -18,9 +18,11 @@
   0% {
     opacity: 1;
   }
+
   50% {
     opacity: 0.5;
   }
+
   100% {
     opacity: 1;
   }
@@ -51,7 +53,8 @@
   text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5), 8px 8px 16px rgba(0, 0, 0, 0.3), 0 0 10px rgba(0, 0, 0, 0.7);
 }
 
-.startGameHuman, .startGameBot {
+.startGameHuman,
+.startGameBot {
   height: 15vh;
   border-radius: 50%;
   overflow: hidden;
@@ -73,6 +76,8 @@
   display: flex;
   align-items: center;
   flex: 0 0 auto;
+  width: 100%;
+  justify-content: space-evenly;
 }
 
 #startGame::before {
@@ -120,6 +125,7 @@
   0% {
     border-color: #ffffff00;
   }
+
   100% {
     border-color: #ffffff9e;
   }
