--- a/src/styles_game.css
+++ b/src/styles_game.css
@@ -4,10 +4,11 @@
   flex-direction: row;
   justify-content: center;
   height: 100vh;
-  background-image: url('../public/img/background.png');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  background-color: #008030;
+  background-image:
+    linear-gradient(90deg, rgba(0, 0, 0, 0.1) 50%, transparent 50%),
+    linear-gradient(rgba(0, 0, 0, 0.1) 50%, transparent 50%);
+  background-size: 40px 40px;
 }
 
 .gameContainer {
@@ -57,8 +58,8 @@
 }
 
 .playersTurn {
-  border-color: #ffd700;
-  box-shadow: 0 0 10px rgba(255, 215, 0, 0.7);
+  border-color: #17e700;
+  box-shadow: 0 0 10px rgba(23, 231, 0, 0.7);
 }
 
 .namePointsContainer {
@@ -79,7 +80,7 @@
 }
 
 .points {
-  color: #ffd700;
+  color: #17e700;
   font-weight: bold;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
   transition: transform 0.3s ease;
@@ -101,6 +102,10 @@
   cursor: default;
 }
 
+.noShadow {
+  box-shadow: none;
+}
+
 .card:hover {
   transform: translateY(-5px);
   box-shadow: 2px 4px 12px rgba(0, 0, 0, 0.4);
@@ -108,7 +113,7 @@
 
 .canThrow {
   cursor: pointer;
-  border: 2px solid #ffd700;
+  border: 2px solid #17e700;
   box-shadow: 0 0 10px rgba(255, 215, 0, 0.5);
 }
 
@@ -120,14 +125,14 @@
 
 .selectable {
   cursor: pointer;
-  border: 2px solid #3498db;
-  box-shadow: 0 0 10px rgba(52, 152, 219, 0.5);
+  border: 3px solid #33e70f;
+  box-shadow: 0 0 10px rgba(51, 231, 15, 0.5);
 }
 
 .selectable:hover,
 .selectable:focus {
   transform: translateY(-8px);
-  box-shadow: 0 0 15px rgba(52, 152, 219, 0.8);
+  box-shadow: 0 0 15px rgba(51, 231, 15, 0.5);
 }
 
 .selected {
@@ -196,8 +201,8 @@
 }
 
 .tableCard.selectable {
-  border: 2px solid #3498db;
-  box-shadow: 0 0 10px rgba(52, 152, 219, 0.5);
+  border: 3px solid #33e70f;
+  box-shadow: 0 0 10px rgba(51, 231, 15, 0.5);
   cursor: pointer;
 }
 
@@ -225,7 +230,7 @@
   align-items: center;
   margin: 0 20px;
   padding: 10px;
-  background: rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 0, 0.3);
   border-radius: 10px;
   min-width: 120px;
 }
@@ -239,6 +244,6 @@
 }
 
 .escobasCount {
-  color: #ffd700;
+  color: #17e700;
   font-weight: bold;
 }
