--- a/src/styles_landing.css
+++ b/src/styles_landing.css
@@ -87,10 +87,12 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-image: url('/public/img/background.png');
-  background-size: cover;
-  background-position: center;
-  opacity: 0.5;
+  background-color: #008030;
+  /* lightgreen */
+  background-image:
+    linear-gradient(90deg, rgba(0, 0, 0, 0.1) 50%, transparent 50%),
+    linear-gradient(rgba(0, 0, 0, 0.1) 50%, transparent 50%);
+  background-size: 40px 40px;
   z-index: -1;
 }
 
