--- a/src/styles_game.css
+++ b/src/styles_game.css
@@ -19,6 +19,7 @@
   width: 800px;
   max-width: 90vw;
   padding: 20px;
+  height: 95vh;
 }
 
 .sideColumn {
@@ -31,7 +32,6 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  margin: 10px 0;
 }
 
 .column {
@@ -50,8 +50,8 @@
 }
 
 .playerImg {
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   border: 3px solid transparent;
   transition: border-color 0.3s ease;
@@ -65,7 +65,8 @@
 .namePointsContainer {
   display: flex;
   align-items: center;
-  margin-top: 10px;
+  font-size: 1.5vh;
+  margin-top: 2px;
 }
 
 .playerName {
@@ -93,8 +94,8 @@
 
 /* Card and Hand Styling */
 .card {
-  width: 10vh;
-  height: 15vh;
+  width: 8vh;
+  height: 12vh;
   margin: 5px;
   border-radius: 8px;
   box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
@@ -167,10 +168,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   margin: 0px 0;
   padding: 0px;
   border-radius: 15px;
-  min-height: 150px;
+  min-height: 25vh;
 }
 
 .tableCardsContainer {
@@ -183,8 +185,8 @@
 }
 
 .tableCard {
-  width: 10vh;
-  height: 15vh;
+  width: 8vh;
+  height: 12vh;
   transition: all 0.2s ease;
   margin: 5px;
   border-radius: 8px;
